# papercolor

./: .clangd  .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  partitions.csv  platformio.ini  sdkconfig.defaults
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
docs/: 802.1x-design.md  album-design.md  build-guide.md  news-display-design.md  project-review.md  refactor-album-app.md
docs/features/: README.md
docs/features/album/: README.md
docs/features/network/: README.md  connection-lifecycle.md  provisioning.md
docs/hardware/: README.md  init-sequence.md  led-driver.md  pin-mapping.md  specifications.md
include/: config.h
main/: CMakeLists.txt  idf_component.yml  main.cpp
main/apps/album/: album_app.cpp  album_app.h  filter.cpp  filter.h  image_downloader.cpp  image_downloader.h  image_renderer.cpp  image_renderer.h  power_manager.cpp  power_manager.h  slide_show.cpp  slide_show.h
main/apps/news/: news_app.cpp  news_app.h  news_fetcher.cpp  news_fetcher.h  news_parser.cpp  news_parser.h
main/apps/template/: template_app.cpp  template_app.h
main/hal/: battery.cpp  battery.h  button.h  config_file.cpp  config_file.h  hal.cpp  hal.h  led_driver.cpp  led_driver.h  sd_card.cpp  sd_card.h  spi_bus.cpp  spi_bus.h
main/wifi/: wifi_manager.cpp  wifi_manager.h  wifi_provisioning.cpp  wifi_provisioning.h
main/wifi/www/: config.html
src/: main.cpp
