idf_component_register(
    SRCS
        "main.cpp"
        "hal/hal.cpp"
        "hal/battery.cpp"
        "hal/config_file.cpp"
        "hal/led_driver.cpp"
        "hal/spi_bus.cpp"
        "hal/sd_card.cpp"
        "wifi/wifi_manager.cpp"
        "wifi/wifi_provisioning.cpp"
        "apps/album/album_app.cpp"
        "apps/album/image_downloader.cpp"
        "apps/album/image_renderer.cpp"
        "apps/album/filter.cpp"
    INCLUDE_DIRS
        "."
        "../include"
        "hal"
        "wifi"
    REQUIRES
        M5Unified
        M5GFX
        esp_new_jpeg
        nvs_flash
        driver
        esp_wifi
        esp_event
        esp_netif
        esp_http_client
        esp_http_server
        esp-tls
        mbedtls
        json
        fatfs
        wpa_supplicant
)
